backend/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: second-backend-api
spec:
  hosts:
    - 'second-backend-api.default.svc.cluster.local'
  http:
    - route:
        - destination:
            host: second-backend-api.default.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-api
spec:
  hosts:
    - 'backend-api.default.svc.cluster.local'
  http:
    - route:
        - destination:
            host: backend-api.default.svc.cluster.local
            port:
              number: 80
---
